@@ -9,6 +9,9 @@ TODO:
 
 version 1.41:
 
+	Improvements:
+	- reorder docs in ::Domain
+
 version 1.40: Fri 18 Apr 17:05:09 CEST 2025
 
 	Fixes:
